--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development gulp",
     "prod": "cross-env NODE_ENV=production gulp",
+    "deploy": "cross-env BASE_URL=/test-gulp/ gulp deploy",
     "serve": "serve ./dest -p 3000"
   },
   "devDependencies": {
@@ -14,6 +15,7 @@
     "gulp": "^4.0.2",
     "gulp-cssmin": "^0.2.0",
     "gulp-filter": "^7.0.0",
+    "gulp-gh-pages": "^0.5.4",
     "gulp-iconfont": "^11.0.0",
     "gulp-iconfont-css": "^3.0.0",
     "gulp-if": "^3.0.0",
@@ -21,6 +23,7 @@
     "gulp-include": "^2.4.1",
     "gulp-pug": "^4.0.1",
     "gulp-rename": "^2.0.0",
+    "gulp-replace-path": "^0.4.0",
     "gulp-sass": "^4.1.0",
     "gulp-uglify": "^3.0.2",
     "node-sass": "^5.0.0",
@@ -29,6 +32,10 @@
   "author": "Ali-romero",
   "license": "MIT",
   "dependencies": {
+    "gulp-absolute-path": "^1.0.4",
+    "gulp-assets": "^0.2.2",
+    "gulp-file-assets": "^3.1.5",
+    "gulp-replace": "^1.1.3",
     "jquery": "^3.6.0"
   }
 }
